--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
         "laravel/telescope": "^3.5",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "~3.0",
         "spatie/laravel-permission": "^3.16"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "barryvdh/laravel-debugbar": "^3.4",
         "beyondcode/laravel-dump-server": "^1.0",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
