--- a/package.json
+++ b/package.json
@@ -73,9 +73,12 @@
         "@vue/cli-service": "^3.7.0",
         "axios": "^0.19",
         "axios-mock-adapter": "^1.17.0",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "popper.js": "^1.12",
         "purgecss": "^1.3.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
